JAXB: Address wsimport failures when upgrading JAXB